@@ -1,3 +1,11 @@
+2008-03-31 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* data/labyrinth.glade
+	* src/MainWindow.py
+	Beautify drop dead ugly export dialog.
+	* src/utils.py
+	Simplification.
+
 2008-03-29 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* src/MMapArea.py
